overflow fix

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,6 +1,8 @@
 // Body and main layout
-html {
-    background: white;
+html, body {
+    overflow-x: hidden;
+    width: 100%;
+    position: relative;
 }
 
 body {
@@ -22,6 +24,7 @@ main {
     gap: 4rem;
     position: relative;
     background: linear-gradient(45deg, var(--primary-color), white);
+    overflow: hidden;
 
     &:before,
     &:after {
@@ -36,6 +39,7 @@ main {
         left: -25%;
         z-index: 1;
         filter: blur(100px);
+        transform: translateZ(0); // Force GPU acceleration
     }
 
     &:after {
